Change connection string to MongoDB

--- a/RoomOfMusicApi/appsettings.json
+++ b/RoomOfMusicApi/appsettings.json
@@ -1,7 +1,8 @@
 {
   "RoomOfMusicDatabaseSettings": {
     "StudentsCollectionName": "Students",
-    "ConnectionString": "mongodb+srv://jodie_brighton:Lmvk8ZXHEBQiEy6E@roomofmusiccluster-1amf6.mongodb.net/test?retryWrites=true&w=majority",
+    "ConnectionString": "mongodb+srv://jodie_brighton:Lmvk8ZXHEBQiEy6E@roomofmusiccluster-1amf6.mongodb.net/test?retryWrites=true&w=majority", // password to be moved to safe store
+    //"ConnectionString": "mongodb+srv://jodie_brighton:Lmvk8ZXHEBQiEy6E@roomofmusiccluster-1amf6.mongodb.net/test?retryWrites=true&w=majority",
     "DatabaseName": "RoomOfMusicDb"
   },
   "Logging": {
